@@ -130,7 +130,7 @@ public class ContentFilterUtil {
 		// Attention: Do not replace with .toList() instead of Collectors.toList(). The
 		// Axon integration will break, as Axon Server is not able to handle classes
 		// like ListN or List12
-		return payload.stream().map(o -> mapElement(o, transformation, predicate)).collect(Collectors.toList());
+		return payload.stream().map(o -> mapElement(o, transformation, predicate)).toList();
 	}
 
 	private static Set<?> mapSetContents(Collection<?> payload, UnaryOperator<Object> transformation,
